# TermOS

./: README.md  main.py  pyproject.toml
termos/: __main__.py  app.py  main.py  style.tcss  termos.py
termos/apps/: __init__.py  base.py  fileManager.py  notes.py
termos/apps/browser/: __init__.py  main.py  style.tcss
termos/apps/calculator/: main.py  style.tcss
termos/apps/clock/: __init__.py  main.py  style.tcss
termos/apps/fileManager/: __init__.py  fileManager.py  main.py
termos/apps/notepad/: __init__.py  main.py  style.tcss
termos/apps/notes/: __init__.py  main.py  style.tcss
termos/components/: bootscreen.py  desktop.py  menu_bar.py  quick_settings.py  start_menu.py  taskbar.py  window.py
termos/components/mainFolder/: 1.txt
