[project]
name = "termos"
version = "0.1.0"
description = "An operating system in your terminal"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "markdownify>=1.0.0",
    "textual>=2.1.2",
]

[dependency-groups]
dev = [
    "textual-dev>=1.7.0",
]

[project.scripts]
termos = "termos.__main__:main"
